...
            android:text="@string/EventDialogue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/informationButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/information_icon"
            app:layout_constraintStart_toEndOf="@+id/prompt"
            app:layout_constraintTop_toTopOf="parent" />
...
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/EventNotFound"
        android:textColor="#FF0000"
        android:visibility="gone" />
    <EditText
        android:id="@+id/slug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:paddingVertical="5dp"
        android:paddingHorizontal="5dp"
        android:textColor="@color/text"
...
